todo list, todo card placeholder

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -55,9 +55,11 @@
 .todos {
   border-radius: 5px;
   display: flex;
-  flex-direction: column;
-  width: 47.5%;
-  padding: 15px;
+  /* flex-direction: column; */
+  /* width: 47.5%; */
+  /* padding: 15px; */
+  width: 90%;
+  justify-content: space-evenly;
   background-color: rgb(50, 195, 205);
 }
 
