--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -53,14 +53,10 @@
 }
 
 .todos {
-  border-radius: 5px;
   display: flex;
-  /* flex-direction: column; */
-  /* width: 47.5%; */
-  /* padding: 15px; */
-  width: 90%;
   justify-content: space-evenly;
-  background-color: rgb(50, 195, 205);
+  width: 90%;
+  flex-wrap: wrap;
 }
 
 .dragactive {
@@ -83,11 +79,11 @@
 
 .todos_single {
   display: flex;
+  width: 29.5%;
   border-radius: 5px;
   padding: 20px;
   margin-top: 15px;
   background-image: url('https://img.freepik.com/free-photo/crumpled-yellow-paper-background-close-up_60487-2390.jpg?size=626&ext=jpg');
-  transition: 0.2s;
 }
 
 .drag {
@@ -116,9 +112,12 @@
   cursor: pointer;
 }
 
-@media (max-width: 1100px) {
-  .todos {
+@media (max-width: 1200px) {
+  /* .todos {
     width: 45%;
+  } */
+  .todos_single {
+    width: 40%;
   }
 }
 
@@ -133,5 +132,8 @@
   .todos {
     width: 95%;
     margin-bottom: 10px;
+  }
+  .todos_single {
+    width: 100%;
   }
 }
